arregla banner y vista/nosotras

--- a/sitio/src/views/nosotras.ejs
+++ b/sitio/src/views/nosotras.ejs
@@ -9,20 +9,66 @@
 
         <!---header-->
 
-        <body class="home">
+        <body class="nosotras">
             <main>
 
-                <section>
+                <section class="nosotras">
                     <h1>¿Quienes somos?</h1>
-                    <p>
-                        
-                    </p>
+                    <div class="caja">
+                    <article class="box-general">
+                        <img src="/img/default-image.png" width="100%" alt="">
+                        <div class="box">
+                            <h4>
+                                Nombre y apellido
+                            </h4>
+                            <div class="box-descripcion">
+                                <p class="descripcion">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum mollitia quia at sed,
+                                    eveniet laboriosam possimus voluptatum soluta commodi pariatur expedita, qui atque
+                                    repellendus. Praesentium quae veniam saepe fugiat? Maiores?
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="box-general">
+                        <img src="/img/default-image.png" width="100%" alt="">
+                        <div class="box">
+                            <h4>
+                                Nombre y apellido
+                            </h4>
+                            <div class="box-descripcion">
+                                <p class="descripcion">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum mollitia quia at sed,
+                                    eveniet laboriosam possimus voluptatum soluta commodi pariatur expedita, qui atque
+                                    repellendus. Praesentium quae veniam saepe fugiat? Maiores?
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="box-general">
+                        <img src="/img/default-image.png" width="100%" alt="">
+                        <div class="box">
+                            <h4>
+                                Nombre y apellido
+                            </h4>
+                            <div class="box-descripcion">
+                                <p class="descripcion">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum mollitia quia at sed,
+                                    eveniet laboriosam possimus voluptatum soluta commodi pariatur expedita, qui atque
+                                    repellendus. Praesentium quae veniam saepe fugiat? Maiores?
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
                 </section>
 
 
             </main>
 
-            <%- include('partials/footer') %>
+           
 
         </body>
 
