--- a/sitio/public/stylesheets/header.css
+++ b/sitio/public/stylesheets/header.css
@@ -181,6 +181,9 @@ header div div.burger-menu{
         order: -1;
         color: #000000;
     }
+    header div a img {
+        width: 90%;
+    }
     header div.search{
         height: 35px;
         padding: 7px;
@@ -274,6 +277,9 @@ header div div.burger-menu{
 
 /*desktop*/
 @media (min-width: 1024px){
+    header div a img {
+        width: 80%;
+    }
     header div.caja-superior {
         justify-content: space-around;
     }
