--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -19,6 +19,7 @@
   font-size: 23px;
   margin: 32px 27px 31px;
   width: 90%;
+  text-align: center;
 }
 .product-card {
   width: auto;
@@ -390,7 +391,7 @@ margin-left: 30%;
 @media (min-width: 768px) {
   .home h1{
     font-size: 33px;
-    margin: 32px 21px 31px;
+    margin: 15px 35px;
   }
    
   .home main article .detail-product {
@@ -449,7 +450,7 @@ margin-left: 30%;
     width: 32%;
   }
    .product-card img {
-    height: 62%;
+    height: 58%;
   }
 
   /*formulario*/
