--- a/sitio/public/stylesheets/styles.css
+++ b/sitio/public/stylesheets/styles.css
@@ -6,4 +6,4 @@
 @import url('./productDetail.css');
 @import url('./register.css');
 @import url('./login.css');
-@import url('./glider.css');
+@import url('./nosotras.css');
